# pandas-chained-logging

./: .gitignore  README.md  pyproject.toml
demo/: example.py
src/pandas_chained_logging/: __init__.py  accessor.py  types.py
tests/: test_accessor.py
