[tool.poetry]
name = "pandas-chained-logging"
version = "0.1.0"
description = "Stay true to pandas method chaining by using this logging accessor"
authors = ["Marwan Sarieddine <marwan@infima.io>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
ruff = "^0.0.245"
black = "^23.1.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
